<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.login.LoginAuthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imgUserLogin"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/baseline_person_pin_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo_for_auth" />

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            style="?attr/textAppearanceDisplayLarge"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/imgUserLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.rjial.storybook.component.common.CustomEditTextView
            android:id="@+id/edtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/placeholder_email"
            tools:text="mboh"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@id/txtLogin"
            />
        <com.rjial.storybook.component.common.CustomEditTextView
            android:id="@+id/edtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/placeholder_password"
            tools:text="mboh"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/edtEmailLogin"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edtPasswordLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent">
            <Button
                android:id="@+id/btnStoryLoginProceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                />
            <ProgressBar
                android:id="@+id/pbLoginLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="?android:attr/progressBarStyle"
                android:indeterminate="true"
                android:visibility="gone"/>
            <Button
                android:id="@+id/btnStoryToRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>