<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.register.RegisterAuthActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:padding="16dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgUserRegister"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/baseline_person_pin_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/logo_for_auth" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="?attr/textAppearanceDisplayLarge"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/imgUserRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.rjial.storybook.component.common.CustomEditTextView
            android:id="@+id/edtNamaRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/placeholder_nama"
            tools:text="mboh"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@id/txtRegister"
            />
        <com.rjial.storybook.component.common.CustomEditTextView
            android:id="@+id/edtEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/placeholder_email"
            tools:text="mboh"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/edtNamaRegister"
            />
        <com.rjial.storybook.component.common.CustomEditTextView
            android:id="@+id/edtPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/placeholder_password"
            tools:text="mboh"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/edtEmailRegister"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/edtPasswordRegister">

            <Button
                android:id="@+id/btnStoryRegisterProceed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                />

            <ProgressBar
                android:id="@+id/pbRegisterLoading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                style="?android:attr/progressBarStyle"
                android:indeterminate="true"
                android:visibility="gone"/>

            <Button
                android:id="@+id/btnStoryToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>