<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.add.AddStoryActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <ImageView
            android:id="@+id/imgAddStory"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/preview_image" />
        <LinearLayout
            android:id="@+id/lytButtonImgStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgAddStory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="16dp"
            android:gravity="center">
            <Button
                android:id="@+id/btnAddStoryImgCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:layout_marginEnd="10dp"/>
            <Button
                android:id="@+id/btnAddStoryImgGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"/>
        </LinearLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swToggleLocAddStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/with_location"
            app:layout_constraintBottom_toTopOf="@+id/lytDescAddStory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytButtonImgStory" />

<!--        <TextView-->
<!--            android:id="@+id/txtLocationAddStory"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/location"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/swToggleLocAddStory" />-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytDescAddStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/swToggleLocAddStory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAddStoryDesc"
                android:textAlignment="textStart"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="150dp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnUploadAddStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/lytDescAddStory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:text="@string/upload"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>