...
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcvStory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
        style="?android:attr/progressBarStyle"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="gone"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnCreateStoryFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
...
